Fix bug horizontal scroll in #header.

--- a/symphony/assets/css/src/admin.less
+++ b/symphony/assets/css/src/admin.less
@@ -128,7 +128,6 @@
 	flex-grow: 1;
 	margin: 0;
 	padding: @spacing-smallish;
-	width: 100%;
 	list-style: none;
 
 	/* Titles */
